--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,24 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+
+
     defaultConfig {
         applicationId "com.example.androidutils"
         minSdkVersion 15
@@ -25,4 +43,20 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //alibaichuan hotfix
+//    implementation 'com.alibaba.sdk.android.plugins:alisdk-hotfix:1.3.3'
+//    implementation 'com.alibaba.sdk.android.plugins.jar:alisdk-utdid:0.0.1'
+    //luban
+    implementation 'top.zibin:Luban:1.0.9'
+    implementation 'org.jsoup:jsoup:1.9.2'
+    implementation 'com.qihoo360.replugin:replugin-host-lib:2.2.4'
+
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 }
